# gameconsole

./: .gitignore  CMakeLists.txt  README.md  main.py  main.sh  run.sh
run/: ncurses-arcade  terminal-mines-single  tinytetris
src/: ncurses-arcade-single.c  nsnake.cpp  terminal-mines-single.c  tinytetris.cpp
